fix masonry overlaps

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -65,7 +65,7 @@
     padding: 20px;
 
     .grid-item {
-      margin-bottom: 10px;
+      margin-bottom: 20px;
     }
   }
 
